--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dan_cdk_lib",
   "version": "0.1.0",
   "bin": {
-    "dan_cdk_lib": "cdk/dan_cdk_lib.js"
+    "dan_cdk_lib": "src/cdk/dan_cdk_lib.js"
   },
   "scripts": {
     "build": "tsc",
@@ -15,6 +15,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
     "aws-cdk": "2.159.1",
+    "aws-sdk": "^2.1691.0",
     "esbuild": "^0.24.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -22,6 +23,7 @@
     "typescript": "~5.6.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-nodejs": "^1.203.0",
     "@types/aws-lambda": "^8.10.145",
     "aws-cdk-lib": "2.159.1",
     "constructs": "^10.0.0",
